--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,17 @@
         "@sveltejs/vite-plugin-svelte": "1.1.0",
         "@tsconfig/svelte": "3.0.0",
         "@types/chrome": "0.0.200",
+        "autoprefixer": "^10.4.14",
+        "postcss": "^8.4.21",
         "svelte": "3.52.0",
         "svelte-check": "2.9.2",
         "svelte-preprocess": "4.10.7",
+        "tailwindcss": "^3.3.1",
         "tslib": "2.4.0",
         "typescript": "4.8.4",
         "vite": "3.2.0"
+    },
+    "dependencies": {
+        "onnxruntime-node": "^1.14.0"
     }
 }
