--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,6 @@
         "vite": "3.2.0"
     },
     "dependencies": {
-        "onnxruntime-node": "^1.14.0"
+        "onnxruntime-web": "^1.14.0"
     }
 }
