--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
         "postcss": "^8.4.21",
         "svelte": "3.52.0",
         "svelte-check": "2.9.2",
-        "svelte-preprocess": "4.10.7",
+        "svelte-preprocess": "^4.10.7",
         "tailwindcss": "^3.3.1",
         "tslib": "2.4.0",
         "typescript": "4.8.4",
