--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
         "vite": "3.2.0"
     },
     "dependencies": {
+        "long-press-event": "^2.4.6",
         "onnxruntime-web": "^1.14.0"
     }
 }
